--- a/index1.html
+++ b/index1.html
@@ -17,7 +17,7 @@
 <br>
 <br>
 <p1>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque omnis nobis mollitia inventore nostrum explicabo possimus, minima, quasi culpa quas deserunt quidem et, exercitationem dolore at aspernatur libero. Consequuntur, atque.
+    lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque omnis nobis mollitia inventore nostrum explicabo possimus, minima, quasi culpa quas deserunt quidem et, exercitationem dolore at aspernatur libero. Consequuntur, atque.
     Aut iure unde eaque possimus tempore pariatur quasi eius minima esse animi! Repellat, qui! Laudantium officia hic eveniet blanditiis porro, libero dolorem, fuga asperiores explicabo autem vero tempora harum veniam.
     Saepe quibusdam nostrum totam iure, consequatur perferendis. Pariatur accusantium totam vitae cum. Nulla molestiae fugiat dolor, quis tempore sint quibusdam, explicabo modi commodi atque architecto adipisci corrupti ex doloremque nemo.
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident sit laboriosam incidunt? Ex explicabo similique, quos magni inventore voluptates praesentium sunt quia doloremque autem, reprehenderit in illum suscipit, facilis error.
