--- a/javascript.html
+++ b/javascript.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First JS Script</title>
+    <title>Conditionals</title>
 </head>
 
 <body>
-    <h1>First Script!</h1>
 
-    <script src="app.js"></script>
+    <script src="javascript.js"></script>
 </body>
 
 </html>
